hphp/hack/test/typecheck/array/disallow_php_array_when_dictionary_like_array_is_required.php
<?hh // partial

function consumesArrayOfStringToInt(array<string, int> $array): void {}

function providesArrayOfUnknown(): array {
  return array("tingley");
}

function test(): void {
  consumesArrayOfStringToInt(providesArrayOfUnknown());
}
